# cosmonic-examples

./: .gitignore  Cargo.toml  devbox.json
apps/my-xkcd/: Cargo.toml
apps/my-xkcd/src/: lib.rs
config/: env.sh  rustup.sh
