[package]
name = "xkcdgenerator"
version = "0.1.0"
authors = ["Cosmonic Team"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "xkcdgenerator"

[dependencies]
futures = "0.3"
serde = "1.0.145"
serde_json = "1.0.85"
wasmbus-rpc = "0.15.0"
wasmcloud-interface-httpserver = "0.12.0"
wasmcloud-interface-numbergen = "0.11.0"
wasmcloud-interface-httpclient = "0.11.0"
